--- a/viikko2/Ohtu-NhlStatistics1/pom.xml
+++ b/viikko2/Ohtu-NhlStatistics1/pom.xml
@@ -22,6 +22,12 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.4</version>
+        </dependency>
+        
     </dependencies>
     <build>
         <plugins>
@@ -32,6 +38,12 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+            </plugin>
+
         </plugins>
     </build>
 </project>
