--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 
 /viikko2/Ohtu-NhlStatistics1/target/
+/viikko2/Verkkokauppa1/my_checks.xml~
+/viikko2/Verkkokauppa1/my_checks_backup.xml
 /viikko2/Verkkokauppa1/target/
 /target/
 /OhtuVarasto/target/
