--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /viikko4/Verkkokauppa4/target/
 /viikko5/TyhjaProjekti/target/
 /viikko6/IntJoukkoSovellus/target/
+/viikko6/QueryLanguage1/target/
