--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /viikko5/TyhjaProjekti/target/
 /viikko6/IntJoukkoSovellus/target/
 /viikko6/QueryLanguage1/target/
+/viikko6/KumpulaBiershop/target/
+/viikko7/KiviPaperiSakset/KiviPaperiSakset/target/
